# Supervisor

./: CMakeLists.txt  README.md
daemon/: daemon.c  daemon_flags.h  listener.c  listener.h  methods.c  methods.h
executabileTest/: test  test.c  test2  test2.c  test3  test3.c  test4  test4.c  test5  test5.c  test6  test6.c  test7  test7.c
shared/: service.h  socket_encoding.c  socket_encoding.h
test/: main.c
